--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "dns": "^0.2.2",
     "firebase": "^12.7.0",
+    "idb": "^8.0.3",
+    "mongodb": "^7.0.0",
     "next": "16.1.1",
     "next-pwa": "^5.6.0",
     "react": "19.2.3",
