--- a/public/manifest.json
+++ b/public/manifest.json
@@ -9,9 +9,9 @@
   "theme_color": "#22c55e",
   "icons": [
     {
-      "src": "/icons/icon-192.png",
+      "src": "/icons/icon-192.jpg",
       "sizes": "192x192",
-      "type": "image/png"
+      "type": "image/jpeg"
     },
     {
       "src": "/icons/icon-512.png",
