--- a/public/manifest.json
+++ b/public/manifest.json
@@ -14,9 +14,9 @@
       "type": "image/jpeg"
     },
     {
-      "src": "/icons/icon-512.png",
+      "src": "/icons/icon-512.jpg",
       "sizes": "512x512",
-      "type": "image/png"
+      "type": "image/jpeg"
     }
   ]
 }
